# conflict-zero

./: .backend-deploy-trigger  .backend-trigger  .deploy-all  .deploy-backend  .deploy-backend-force  .deploy-trigger  .deploy-trigger-final  .env.example  .force-deploy-backend  .force-rebuild  .force-render-rebuild  .gitignore  .gitkeep  .rebuild-marker  .rebuild-trigger  .redeploy-trigger  API_KEYS.md  CI_CD_README.md  CONFIGURAR_API_KEY.md  CONFLICT_ZERO_PLAN.md  DEPLOY.md  DEPLOY_BACKEND_PYTHON.sh  DEPLOY_FRONTEND.md  DEPLOY_GUIA_COMPLETA.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NETLIFY.md  DEPLOY_PRODUCCION.md  DIAGNOSTICO_RENDER.sh  Dockerfile  FIXES_SNIPPETS_2026-05-02.md  FIX_API_DECOLECTA.md  FORZAR_REBUILD.sh  FORZAR_REDEPLOY.sh  FORZAR_REDEPLOY_RENDER.sh  GITHUB_ACTIONS_QUICK_SETUP.md  GITHUB_ACTIONS_SETUP.md  GUIA_RAPIDA.md  MEMORY.md  Makefile  PRODUCTION_CHECKLIST.md  (+36 more)
backend/: .dockerignore  .env.example  Dockerfile  MIGRACION_POSTGRESQL.md  README.md  api_v3.py  api_v3.py.DEPRECATED.2026-04-20  import_to_postgres.py  load_routes.py  main.py  migrate-to-postgres.sh  package.json  pyproject.toml  registration_routes.py  render-build.sh  render.yaml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2f66a034fd23_add_is_approved_to_users.py  5bf3fcd427a1_add_company_snapshots_ml_ready.py  88024a4663a8_add_user_suppliers_table.py  e26ecd8b31fe_add_ruc_cache_table.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/models/: __init__.py  subscription.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  certificates.py  compare.py  consulta.py  dashboard.py  health.py  network.py  notifications.py  payments.py  payments_admin.py  verification.py  webhooks.py
backend/app/schemas/: __init__.py  network.py  plans.py
backend/app/services/: __init__.py  buscaruc_adapter.py  compare_service.py  email.py  (+10 more)
backend/scripts/: auditor_sanciones.py  backup-db.sh  backup_s3.py  cron_daily_network_check.py  diagnostico_20529400790.py  diagnostico_simple_20529400790.py  export_snapshots_to_csv.py  health_check_monitor.py  migration_osce_detalle.py  migration_rnp_table.py  osce_ingestion.py  rnp_scraper.py  sync_osce_risk_daily.py  tce_ingestion.py  update_osce_risk_data_20529400790.py  update_sancion_20529400790.py  update_sancion_20529400790_v2.py
backend/src/: index.ts
backend/tests/: conftest.py  test_main.py
(+286 files in other folders)
